correction des contrastes

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+footer p{
+    font-weight:700;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -216,7 +218,7 @@ a:focus{
 
 .d-bloc .panel .divider-h span,
 .l-bloc .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
+    border-color: rgba(0, 0, 0, .5);
 }
 
 .d-bloc .panel .a-btn,
@@ -514,6 +516,7 @@ button {
 }
 
 .scrollToTop {
+    
     width: 40px;
     height: 40px;
     position: fixed;
@@ -648,7 +651,7 @@ h3,
 h4,
 h5,
 h6,
-p,
+
 label,
 .btn,
 a {
@@ -708,8 +711,9 @@ p {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 28px;
     line-height: 1.4em;
+    font-weight: 600;
 }
 
 h3 {
